# KidneyCare

./: .gitignore  Readme.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
Backend/: .dockerignore  Cargo.toml  DockerFile  Dockerfile  compose.yaml  diesel.toml  fly.toml  package.json  readme.md
Backend/.sqlx/: query-2485e6bb9ca98574823b06f4075da54e785e790eea313ac18c1159ff2cea1531.json  query-38fb8a5337b36ae5c9c7aa1071d072a7c7dbaad8bca708db3a798b404cd68ba1.json  query-4af6b861809e71bd41dd56664f4f1bd4cf34369b423771612d1b25afa1315383.json  query-573b2a174dfa2f27a6f87151461009773326a760581286f4e96390551994e5d8.json  query-580ad50129989f8ff761bdb5fb65d5b7bd58c3a8824b9966e10c0fe152ba4e66.json  query-5daf3aa68e0726875ad88ca0e9920230c4b5c25e05bdd22192afd9a7262ac04d.json  query-673dd538dc4a0943853eebd3e9aa722db9f49dd16b279d89189b66158ebad253.json  query-740c1c652e9b32f673ccc3233e4797c9f22aa53da3a3e4f7b3fb696c54e3f661.json  query-750fb79bd15c29e1cf302c6b569c0f9976d5211258dc5d9c0e468404b97a59c2.json  query-75c267a043f009a8f035b254781ba1c30324cffcf6adc3914b7964e1118c98b6.json  query-7e07a7c279d2720284e470de2f303f02355d81c166211056899d9702aac5a9d6.json  query-7faccd01e9e7d7c0ed6695598c1bf88b5215347f15a9aca57d61e9dfc5c8a80b.json  query-83e2ea32365f26440f2c7d21a31093480e70e6f66beb8686045f9104b1992941.json  query-9b7400300b97f3e6eab3381f5bbba50ba2fa9208754c56a89d14cdfad0c90aef.json  query-aec80528522a91c793e3e6b1b1455fbeff847930deedb64193dd96adfe9a3117.json  query-b1359471d211fd19aa5f78eb0c994c7e30c99648a83262f4042b4cef0b51dafc.json  query-c39a10dec851f411d42f6549e39c552cba8c358a212f99b1fc88dde1eaf07899.json  query-cf14b8896568ae6b9fc49bbbc806ed671e3d6dfa29b805eb21c9fd53bf2e9da1.json  query-d284ecac350d292cf38353942594841aa7a5186c3428061009105e9d8a8944d8.json  query-e1d48f5ecf92ce2f3a2fe0f47a8547bf15e84a20b2a581d0c3b1e5e1e731d075.json  query-f50a0721b3a19423e472fff2007f6a70b3e669b51f8468910ba5ed01ceeb0a19.json  query-faafbb587fd02af34ba23fb9d6505733bf02f62ca7b5a1855b811d02be873c76.json
Backend/src/: config.rs  lib.rs  main.rs  main2.rs
Backend/src/db/: queries.rs
Backend/src/mockup_data/: data_from_front.json  data_to_ai.json  meal_plan.json
Backend/src/models/: food.rs  mealplan.rs  mod.rs  user.rs
Backend/src/routes/: admin.rs  chatbot.rs  food.rs  ingredient.rs  lineapi.rs  mealplan.rs  mod.rs  pill.rs  recipe.rs  test.rs  user.rs
Backend/src/utils/: datetime.rs
Components/: DonutGraph.tsx  Navbar.tsx  SearchBox.tsx  SearchFoodBox.tsx
Frontend/: Dockerfile  README.md  bun.lockb  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
app/: page.tsx
kidney_diesel/: Cargo.toml  diesel.toml  fly.toml  package.json
kidneycare/: package.json
(+113 files in other folders)
