[package]
name = "Backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#axum
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }

#postgres
sqlx = {version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "time", "chrono"]}

#serde
serde = { version = "1.0.195", features = ["derive"] }
serde_json = {version = "1.0.111"}

#env
dotenvy = "0.15.7"

# chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

chrono = { version = "0.4", features = ["serde", "clock", "std"] }
# sqlx = { version = "0.7", features = ["postgres", "chrono"] }