[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#axum
axum = { version = "0.8.1", features = ["tokio", "http1","macros"] }
axum-extra = "0.10.0"
tokio = { version = "1.35.1", features = ["full"] }

#postgres
sqlx = {version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "time", "chrono"]}

#serde
serde = { version = "1.0.195", features = ["derive"] }
serde_json = {version = "1.0.111"}

#env
dotenvy = "0.15.7"

time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

chrono = { version = "0.4", features = ["serde", "clock", "std"] }
hyper = { version = "0.14", features = ["server"] }  # Added the server feature
tower = "0.4"
