[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
#axum
axum = { version = "0.8.1", features = ["tokio", "http1","macros","multipart"] }
axum-extra = "0.10.0"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "5", features = ["axum"] }

#postgres
sqlx = {version = "0.8.3", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros", "time", "chrono", "uuid"]}
# sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "macros", "uuid"] }
#serde
serde = { version = "1.0.195", features = ["derive"] }
serde_json = {version = "1.0.111"}

#env
dotenvy = "0.15.7"

time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

chrono = { version = "0.4", features = ["serde", "clock", "std"] }
hyper = { version = "0.14", features = ["server"] }  # Added the server feature
tower = "0.4"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
image = "0.25.5"
md-5 = "0.10"
# smallvec = "1.10.0"
# futures = "0.3"
# rayon = "1.7"
# mozjpeg = "0.10.13"